--- a/laravel-qa/public/css/app.css
+++ b/laravel-qa/public/css/app.css
@@ -11669,3 +11669,21 @@ strong {
   height: 60px;
 }
 
+.status.unanswered {
+  border: none;
+}
+
+.status.answered {
+  border: 1px solid #5fbb7e;
+  color: #5fbb7e;
+}
+
+.status.answered-accepted {
+  background: #5fbb7e;
+  color: #fff;
+}
+
+.view {
+  margin-top: 10px;
+}
+
